// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Coachmark renders Coachmark (color properties) 1`] = `
<div>
  <span
    class="ms-layer"
  >
    <div
      class=
          ms-Fabric
          ms-Layer-content
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #323130;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            visibility: visible;
          }
          & button {
            font-family: inherit;
          }
          & input {
            font-family: inherit;
          }
          & textarea {
            font-family: inherit;
          }
    >
      <div
        class=
            ms-PositioningContainer
            {
              position: relative;
            }
      >
        <div
          class=
              ms-PositioningContainer-layerHost
              {
                border: 1px solid \${};
                box-sizing: border-box;
                outline: transparent;
                position: absolute;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                border: 1px solid WindowText;
              }
              &::-moz-focus-inner {
                border: 0px;
              }
          style="opacity: 0;"
          tabindex="-1"
        >
          <div
            class=

                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 400;
                  position: relative;
                }
          >
            <div
              class=

                  {
                    animation-delay: 0ms;
                    animation-duration: 14s;
                    animation-iteration-count: 1;
                    animation-name: keyframes 0%{border-color:green;border-width:0px;width:35px;height:35px;}1.42%{opacity:1;border-width:10px;}3.57%{opacity:1;}7.14%{border-width:0;width:150px;height:150px;opacity:0;border-color:blue;}8%{border-color:green;border-width:0px;width:35px;height:35px;opacity:0;}29.99%{border-color:green;border-width:0px;width:35px;height:35px;opacity:0;}30%{border-color:green;border-width:0px;width:35px;height:35px;}31.42%{opacity:1;border-width:10px;}33.57%{opacity:1;}37.14%{border-width:0;width:150px;height:150px;opacity:0;border-color:blue;}38%{border-color:green;border-width:0px;width:35px;height:35px;opacity:0;}79.42%{border-color:green;border-width:0px;width:35px;height:35px;opacity:0;}79.43{border-color:green;border-width:0px;width:35px;height:35px;}81.85{opacity:1;border-width:10px;}83.42{opacity:1;}87%{border-width:0;width:150px;height:150px;opacity:0;border-color:blue;}100%{};
                    border-radius: 225px;
                    border-style: solid;
                    height: 0px;
                    left: 50%;
                    opacity: 0;
                    position: absolute;
                    top: 50%;
                    transform: translate(-50%, -50%);
                    width: 0px;
                  }
            />
            <div
              class=

                  {
                    animation-delay: 0s;
                    animation-direction: normal;
                    animation-duration: 14s;
                    animation-fill-mode: forwards;
                    animation-iteration-count: 1;
                    animation-name: keyframes 0%{transform:translate(0, 0);animation-timing-function:linear;}78.57%{transform:translate(0, 0);animation-timing-function:cubic-bezier(0.62, 0, 0.56, 1);}82.14%{transform:translate(0, -5px);animation-timing-function:cubic-bezier(0.58, 0, 0, 1);}84.88%{transform:translate(0, 9px);animation-timing-function:cubic-bezier(1, 0, 0.56, 1);}88.1%{transform:translate(0, -2px);animation-timing-function:cubic-bezier(0.58, 0, 0.67, 1);}90.12%{transform:translate(0, 0);animation-timing-function:linear;}100%{transform:translate(0, 0);};
                    animation-timing-function: linear;
                    height: 100%;
                    transition: opacity 0.5s ease-in-out;
                    width: 100%;
                  }
            >
              <div
                class=

                    {
                      animation-delay: 0s;
                      animation-direction: normal;
                      animation-duration: 14s;
                      animation-fill-mode: forwards;
                      animation-iteration-count: 1;
                      animation-name: keyframes 0%{transform: scale(0);animation-timing-function:linear;}14.29%{transform:scale(0);animation-timing-function:cubic-bezier(0.84, 0, 0.52, 0.99);}16.67%{transform:scale(1.15);animation-timing-function:cubic-bezier(0.48, -0.01, 0.52, 1.01);}19.05%{transform:scale(0.95);animation-timing-function:cubic-bezier(0.48, 0.02, 0.52, 0.98);}21.43%{transform:scale(1);animation-timing-function:linear;}42.86%{transform:scale(1);animation-timing-function:cubic-bezier(0.48, -0.02, 0.52, 1.02);}45.71%{transform:scale(0.8);animation-timing-function:cubic-bezier(0.48, 0.01, 0.52, 0.99);}50%{transform:scale(1);animation-timing-function:linear;}90.12%{transform:scale(1);animation-timing-function:cubic-bezier(0.48, -0.02, 0.52, 1.02);}92.98%{transform:scale(0.8);animation-timing-function:cubic-bezier(0.48, 0.01, 0.52, 0.99);}97.26%{transform:scale(1);animation-timing-function:linear;}100%{transform:scale(1);};
                      animation-timing-function: linear;
                      height: 100%;
                      width: 100%;
                    }
              >
                <div
                  class=

                      {
                        animation-delay: 0s;
                        animation-direction: normal;
                        animation-duration: 14s;
                        animation-fill-mode: forwards;
                        animation-iteration-count: 1;
                        animation-name: keyframes 0%{transform:rotate(0deg);animation-timing-function:linear;}83.33%{transform: rotate(0deg);animation-timing-function:cubic-bezier(0.33, 0, 0.67, 1);}83.93%{transform:rotate(15deg);animation-timing-function:cubic-bezier(0.33, 0, 0.67, 1);}84.52%{transform:rotate(-15deg);animation-timing-function:cubic-bezier(0.33, 0, 0.67, 1);}85.12%{transform:rotate(15deg);animation-timing-function:cubic-bezier(0.33, 0, 0.67, 1);}85.71%{transform:rotate(-15deg);animation-timing-function:cubic-bezier(0.33, 0, 0.67, 1);}86.31%{transform:rotate(0deg);animation-timing-function:linear;}100%{transform:rotate(0deg);};
                        animation-timing-function: linear;
                        height: 100%;
                        width: 100%;
                      }
                >
                  <div
                    class=

                        {
                          border: none;
                          bottom: 3px;
                          box-shadow: inherit;
                          box-sizing: border-box;
                          height: 10px;
                          left: calc(50% - 9px);
                          position: absolute;
                          transform: translateY(100%);
                          width: 18px;
                        }
                    role="presentation"
                  >
                    <svg
                      class=

                          {
                            display: block;
                            fill: red;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            fill: windowtext;
                          }
                      height="10"
                      width="18"
                    >
                      <polygon
                        points="0, 0 18, 0 9, 10"
                      />
                    </svg>
                  </div>
                  <div
                    class=

                        {
                          background-color: red;
                          border-radius: 32px;
                          cursor: pointer;
                          outline: none;
                          overflow: hidden;
                          position: relative;
                          transition: border-radius 250ms, width 500ms, height 500ms cubic-bezier(0.5, 0, 0, 1);
                          visibility: hidden;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                          background-color: Window;
                          border: 2px solid WindowText;
                        }
                        .ms-Fabric--isFocusVisible &:focus {
                          outline: 1px solid #71afe5;
                        }
                    data-is-focusable="true"
                    role="dialog"
                    tabindex="-1"
                  >
                    <div
                      data-tabster="{\\"uncontrolled\\": {\\"completely\\": true}}"
                    >
                      <div
                        aria-hidden="true"
                        data-is-focus-trap-zone-bumper="true"
                        data-is-visible="true"
                        style="pointer-events: none; position: fixed;"
                        tabindex="0"
                      />
                      <div
                        class=

                            {
                              transform-origin: center bottom;
                              transform: scale(0);
                              transition: transform 500ms cubic-bezier(0.5, 0, 0, 1);
                            }
                      >
                        <div
                          aria-hidden="true"
                          class=

                              {
                                display: block;
                              }
                        />
                      </div>
                      <div
                        aria-hidden="true"
                        data-is-focus-trap-zone-bumper="true"
                        data-is-visible="true"
                        style="pointer-events: none; position: fixed;"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`Coachmark renders Coachmark (correctly) 1`] = `
<div>
  <span
    class="ms-layer"
  >
    <div
      class=
          ms-Fabric
          ms-Layer-content
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #323130;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            visibility: visible;
          }
          & button {
            font-family: inherit;
          }
          & input {
            font-family: inherit;
          }
          & textarea {
            font-family: inherit;
          }
    >
      <div
        class=
            ms-PositioningContainer
            {
              position: relative;
            }
      >
        <div
          class=
              ms-PositioningContainer-layerHost
              {
                border: 1px solid \${};
                box-sizing: border-box;
                outline: transparent;
                position: absolute;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                border: 1px solid WindowText;
              }
              &::-moz-focus-inner {
                border: 0px;
              }
          style="opacity: 0;"
          tabindex="-1"
        >
          <div
            class=
                test-className
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 400;
                  position: relative;
                }
          >
            <div
              class=

                  {
                    animation-delay: 0ms;
                    animation-duration: 14s;
                    animation-iteration-count: 1;
                    animation-name: keyframes 0%{border-color:#0078d4;border-width:0px;width:35px;height:35px;}1.42%{opacity:1;border-width:10px;}3.57%{opacity:1;}7.14%{border-width:0;width:150px;height:150px;opacity:0;border-color:#71afe5;}8%{border-color:#0078d4;border-width:0px;width:35px;height:35px;opacity:0;}29.99%{border-color:#0078d4;border-width:0px;width:35px;height:35px;opacity:0;}30%{border-color:#0078d4;border-width:0px;width:35px;height:35px;}31.42%{opacity:1;border-width:10px;}33.57%{opacity:1;}37.14%{border-width:0;width:150px;height:150px;opacity:0;border-color:#71afe5;}38%{border-color:#0078d4;border-width:0px;width:35px;height:35px;opacity:0;}79.42%{border-color:#0078d4;border-width:0px;width:35px;height:35px;opacity:0;}79.43{border-color:#0078d4;border-width:0px;width:35px;height:35px;}81.85{opacity:1;border-width:10px;}83.42{opacity:1;}87%{border-width:0;width:150px;height:150px;opacity:0;border-color:#71afe5;}100%{};
                    border-radius: 225px;
                    border-style: solid;
                    height: 0px;
                    left: 50%;
                    opacity: 0;
                    position: absolute;
                    top: 50%;
                    transform: translate(-50%, -50%);
                    width: 0px;
                  }
            />
            <div
              class=

                  {
                    animation-delay: 0s;
                    animation-direction: normal;
                    animation-duration: 14s;
                    animation-fill-mode: forwards;
                    animation-iteration-count: 1;
                    animation-name: keyframes 0%{transform:translate(0, 0);animation-timing-function:linear;}78.57%{transform:translate(0, 0);animation-timing-function:cubic-bezier(0.62, 0, 0.56, 1);}82.14%{transform:translate(0, -5px);animation-timing-function:cubic-bezier(0.58, 0, 0, 1);}84.88%{transform:translate(0, 9px);animation-timing-function:cubic-bezier(1, 0, 0.56, 1);}88.1%{transform:translate(0, -2px);animation-timing-function:cubic-bezier(0.58, 0, 0.67, 1);}90.12%{transform:translate(0, 0);animation-timing-function:linear;}100%{transform:translate(0, 0);};
                    animation-timing-function: linear;
                    height: 100%;
                    transition: opacity 0.5s ease-in-out;
                    width: 100%;
                  }
            >
              <div
                class=

                    {
                      animation-delay: 0s;
                      animation-direction: normal;
                      animation-duration: 14s;
                      animation-fill-mode: forwards;
                      animation-iteration-count: 1;
                      animation-name: keyframes 0%{transform: scale(0);animation-timing-function:linear;}14.29%{transform:scale(0);animation-timing-function:cubic-bezier(0.84, 0, 0.52, 0.99);}16.67%{transform:scale(1.15);animation-timing-function:cubic-bezier(0.48, -0.01, 0.52, 1.01);}19.05%{transform:scale(0.95);animation-timing-function:cubic-bezier(0.48, 0.02, 0.52, 0.98);}21.43%{transform:scale(1);animation-timing-function:linear;}42.86%{transform:scale(1);animation-timing-function:cubic-bezier(0.48, -0.02, 0.52, 1.02);}45.71%{transform:scale(0.8);animation-timing-function:cubic-bezier(0.48, 0.01, 0.52, 0.99);}50%{transform:scale(1);animation-timing-function:linear;}90.12%{transform:scale(1);animation-timing-function:cubic-bezier(0.48, -0.02, 0.52, 1.02);}92.98%{transform:scale(0.8);animation-timing-function:cubic-bezier(0.48, 0.01, 0.52, 0.99);}97.26%{transform:scale(1);animation-timing-function:linear;}100%{transform:scale(1);};
                      animation-timing-function: linear;
                      height: 100%;
                      width: 100%;
                    }
              >
                <div
                  class=

                      {
                        animation-delay: 0s;
                        animation-direction: normal;
                        animation-duration: 14s;
                        animation-fill-mode: forwards;
                        animation-iteration-count: 1;
                        animation-name: keyframes 0%{transform:rotate(0deg);animation-timing-function:linear;}83.33%{transform: rotate(0deg);animation-timing-function:cubic-bezier(0.33, 0, 0.67, 1);}83.93%{transform:rotate(15deg);animation-timing-function:cubic-bezier(0.33, 0, 0.67, 1);}84.52%{transform:rotate(-15deg);animation-timing-function:cubic-bezier(0.33, 0, 0.67, 1);}85.12%{transform:rotate(15deg);animation-timing-function:cubic-bezier(0.33, 0, 0.67, 1);}85.71%{transform:rotate(-15deg);animation-timing-function:cubic-bezier(0.33, 0, 0.67, 1);}86.31%{transform:rotate(0deg);animation-timing-function:linear;}100%{transform:rotate(0deg);};
                        animation-timing-function: linear;
                        height: 100%;
                        width: 100%;
                      }
                >
                  <div
                    class=

                        {
                          border: none;
                          bottom: 3px;
                          box-shadow: inherit;
                          box-sizing: border-box;
                          height: 10px;
                          left: calc(50% - 9px);
                          position: absolute;
                          transform: translateY(100%);
                          width: 18px;
                        }
                    role="presentation"
                  >
                    <svg
                      class=

                          {
                            display: block;
                            fill: #0078d4;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            fill: windowtext;
                          }
                      height="10"
                      width="18"
                    >
                      <polygon
                        points="0, 0 18, 0 9, 10"
                      />
                    </svg>
                  </div>
                  <div
                    class=

                        {
                          background-color: #0078d4;
                          border-radius: 32px;
                          cursor: pointer;
                          outline: none;
                          overflow: hidden;
                          position: relative;
                          transition: border-radius 250ms, width 500ms, height 500ms cubic-bezier(0.5, 0, 0, 1);
                          visibility: hidden;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                          background-color: Window;
                          border: 2px solid WindowText;
                        }
                        .ms-Fabric--isFocusVisible &:focus {
                          outline: 1px solid #71afe5;
                        }
                    data-is-focusable="true"
                    role="dialog"
                    tabindex="-1"
                  >
                    <div
                      data-tabster="{\\"uncontrolled\\": {\\"completely\\": true}}"
                    >
                      <div
                        aria-hidden="true"
                        data-is-focus-trap-zone-bumper="true"
                        data-is-visible="true"
                        style="pointer-events: none; position: fixed;"
                        tabindex="0"
                      />
                      <div
                        class=

                            {
                              transform-origin: center bottom;
                              transform: scale(0);
                              transition: transform 500ms cubic-bezier(0.5, 0, 0, 1);
                            }
                      >
                        <div
                          aria-hidden="true"
                          class=

                              {
                                display: block;
                              }
                        >
                          This is a test
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        data-is-focus-trap-zone-bumper="true"
                        data-is-visible="true"
                        style="pointer-events: none; position: fixed;"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`Coachmark renders Coachmark (isCollapsed) 1`] = `
<div>
  <span
    class="ms-layer"
  >
    <div
      class=
          ms-Fabric
          ms-Layer-content
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #323130;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            visibility: visible;
          }
          & button {
            font-family: inherit;
          }
          & input {
            font-family: inherit;
          }
          & textarea {
            font-family: inherit;
          }
    >
      <div
        class=
            ms-PositioningContainer
            {
              position: relative;
            }
      >
        <div
          class=
              ms-PositioningContainer-layerHost
              {
                border: 1px solid \${};
                box-sizing: border-box;
                outline: transparent;
                position: absolute;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                border: 1px solid WindowText;
              }
              &::-moz-focus-inner {
                border: 0px;
              }
          style="opacity: 0;"
          tabindex="-1"
        >
          <div
            class=
                test-className
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 400;
                  position: relative;
                }
          >
            <div
              class=

                  {
                    border-radius: 225px;
                    border-style: solid;
                    height: 0px;
                    left: 50%;
                    opacity: 0;
                    position: absolute;
                    top: 50%;
                    transform: translate(-50%, -50%);
                    width: 0px;
                  }
            />
            <div
              class=

                  {
                    height: 100%;
                    opacity: 1;
                    width: 100%;
                  }
            >
              <div
                class=

                    {
                      height: 100%;
                      width: 100%;
                    }
              >
                <div
                  class=

                      {
                        height: 100%;
                        opacity: 1;
                        width: 100%;
                      }
                >
                  <div
                    class=

                        {
                          background-color: #0078d4;
                          border-radius: 1px;
                          opacity: 1;
                          outline: none;
                          overflow: hidden;
                          position: relative;
                          transition: border-radius 250ms, width 500ms, height 500ms cubic-bezier(0.5, 0, 0, 1);
                          visibility: visible;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                          background-color: Window;
                          border: 2px solid WindowText;
                        }
                        .ms-Fabric--isFocusVisible &:focus {
                          outline: 1px solid #71afe5;
                        }
                    data-is-focusable="true"
                    role="dialog"
                    tabindex="-1"
                  >
                    <div
                      data-tabster="{\\"uncontrolled\\": {\\"completely\\": true}}"
                    >
                      <div
                        aria-hidden="true"
                        data-is-focus-trap-zone-bumper="true"
                        data-is-visible="true"
                        style="pointer-events: none; position: fixed;"
                        tabindex="0"
                      />
                      <div
                        class=

                            {
                              transform-origin: center bottom;
                              transform: scale(1);
                              transition: transform 500ms cubic-bezier(0.5, 0, 0, 1);
                              visibility: visible;
                            }
                      >
                        <div
                          aria-hidden="false"
                          class=

                              {
                                display: block;
                              }
                        >
                          This is a test
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        data-is-focus-trap-zone-bumper="true"
                        data-is-visible="true"
                        style="pointer-events: none; position: fixed;"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;
